Fixed API issue with Integer, Byte, Double, etc