@@ -59,25 +59,25 @@ public class AxisAlignedSlice4DAttributes extends AttributeSubject implements Pl
         for(i = 0; i < obj.I.size(); ++i)
         {
             Integer iv = (Integer)obj.I.elementAt(i);
-            I.addElement(new Integer(iv.intValue()));
+            I.addElement(Integer.valueOf(iv.intValue()));
         }
         J = new Vector<Integer>();
         for(i = 0; i < obj.J.size(); ++i)
         {
             Integer iv = (Integer)obj.J.elementAt(i);
-            J.addElement(new Integer(iv.intValue()));
+            J.addElement(Integer.valueOf(iv.intValue()));
         }
         K = new Vector<Integer>();
         for(i = 0; i < obj.K.size(); ++i)
         {
             Integer iv = (Integer)obj.K.elementAt(i);
-            K.addElement(new Integer(iv.intValue()));
+            K.addElement(Integer.valueOf(iv.intValue()));
         }
         L = new Vector<Integer>();
         for(i = 0; i < obj.L.size(); ++i)
         {
             Integer iv = (Integer)obj.L.elementAt(i);
-            L.addElement(new Integer(iv.intValue()));
+            L.addElement(Integer.valueOf(iv.intValue()));
         }
 
         SelectAll();
